log/build_2026-03-01_21-39-47/master_ros2_pkg/stdout_stderr.log
-- Found ament_cmake: 2.5.4 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Found rclcpp: 28.1.13 (/opt/ros/jazzy/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.6.6 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.6 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.2 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.3 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found std_msgs: 5.3.6 (/opt/ros/jazzy/share/std_msgs/cmake)
-- Found master_ros2_interface: 0.0.0 (/root/master_ros2_ws/install/master_ros2_interface/share/master_ros2_interface/cmake)
-- Found ament_lint_auto: 0.17.3 (/opt/ros/jazzy/share/ament_lint_auto/cmake)
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: 
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /root/master_ros2_ws/build/master_ros2_pkg
[ 50%] Building CXX object CMakeFiles/publisher_node.dir/src/publisher_node.cpp.o
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:22:2: error: expected ‘;’ after class definition
   22 | }
      |  ^
      |  ;
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp: In constructor ‘PublisherNode::PublisherNode()’:
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:10:73: error: ‘class rclcpp::QoS’ has no member named ‘transient_’; did you mean ‘transient_local’?
   10 |         auto qos_profile = rclcpp::QoS(rclcpp::KeepLast(10)).reliable().transient_ local();
      |                                                                         ^~~~~~~~~~
      |                                                                         transient_local
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:11:9: error: ‘publisher_’ was not declared in this scope; did you mean ‘PublisherNode’?
   11 |         publisher_ = this->create_publisher<std_msgs::msg::String>("std_string_topic", qos_profile);
      |         ^~~~~~~~~~
      |         PublisherNode
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:12:9: error: ‘custom_publisher_’ was not declared in this scope; did you mean ‘count_publishers’?
   12 |         custom_publisher_ = this->create_publisher<master_ros2_interface::msg::CustomMsg>("custom_topic", qos_profile);
      |         ^~~~~~~~~~~~~~~~~
      |         count_publishers
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:18:9: error: ‘timer_’ was not declared in this scope; did you mean ‘timer_t’?
   18 |         timer_ = this->create_wall_timer(
      |         ^~~~~~
      |         timer_t
/root/master_ros2_ws/src/master_ros2_pkg/src/publisher_node.cpp:20:39: error: ‘publish_messages’ is not a member of ‘PublisherNode’
   20 |             std::bind(&PublisherNode::publish_messages, this));
      |                                       ^~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/publisher_node.dir/build.make:76: CMakeFiles/publisher_node.dir/src/publisher_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/publisher_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
